--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Quiz App</title>
 </head>
-<body>
+<body class="escuro">
     <header>
         <div class="tema">
             <img src="./assets/images/icon-sun-dark.svg" alt="Icone do sol">
@@ -18,8 +18,8 @@
             </button>
             <img src="./assets/images/icon-moon-dark.svg" alt="Icone da lua">
         </div>
-
     </header>
+    
     <main>
         <section class="boas_vindas">
             <h1>
@@ -59,7 +59,7 @@
                 Acessibilidade
             </button>
         </section>
-        
+
     </main>
 </body>
 </html>
