--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 Acessibilidade
             </button>
         </section>
-
     </main>
+
+    <a href="./pages/quiz/quiz.html">Quiz</a>
 </body>
 </html>
