--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
                 <div>
                     <img src="./assets/images/icon-html.svg" alt="Icone do HTML">
                 </div>
-                <span>HTML</span>
+                HTML
             </button>
 
             <button class="botao_css">
                 <div>
                     <img src="./assets/images/icon-css.svg" alt="Icone do CSS">
                 </div>
-                <span>CSS</span>
+                CSS
             </button>
 
             <button class="botao_javascript">
                 <div>
                     <img src="./assets/images/icon-javascript.svg" alt="Icone do Javascript">
                 </div>
-                <span>Javascript</span>
+                Javascript
             </button>
 
             <button class="botao_acessibilidade">
                 <div>
                     <img src="./assets/images/icon-acessibilidade.svg" alt="Icone da Acessibilidade">
                 </div>
-                <span>Acessibilidade</span>
+                Acessibilidade
             </button>
         </section>
     </main>
